--- a/lesson_6/css/style.css
+++ b/lesson_6/css/style.css
@@ -8,22 +8,13 @@ body {
   word-break: break-all;
 }
 .open {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(255, 255, 255, 0.3);
-  border: none;
-  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
-  width: 250px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 1px solid #000;
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+  width: 350px;
   height: 100px;
   margin: 0 auto;
   margin-top: 20px;
@@ -32,71 +23,43 @@ body {
   content: "";
   display: block;
   position: absolute;
-  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
-  width: 20px;
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+  width: 8px;
   height: 20px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #000;
   margin: 0 auto;
-  -webkit-transform: translateY(-60px);
-      -ms-transform: translateY(-60px);
-          transform: translateY(-60px);
+  transform: translateY(-60px);
 }
 .open-btn {
   border: none;
   outline: none;
   color: #fff;
   font-weight: 900;
-  font-size: 18px;
   cursor: pointer;
-  background-color: rgba(83, 109, 254, 0.6);
-  box-shadow: 1px 0px 10px rgba(83, 86, 173, 0.5);
-  border-radius: 2px;
-  border: none;
+  background-color: #5356ad;
+  box-shadow: 0px 0px 10px rgba(83, 86, 173, 0.5);
+  border-radius: 8px;
+  border: 1px solid #fff;
   width: 200px;
   height: 50px;
-}
-.open-btn:hover{
-  background-color: #00BCD4;
-  transform: scale(1.2);
 }
 .main {
   width: 100%;
   margin-top: 30px;
-  margin-bottom: 30px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  justify-content: space-around;
 }
 .main-info {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-align-content: flex-start;
-      -ms-flex-line-pack: start;
-          align-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
   width: 550px;
-  min-height: 300px;
+  min-height: 400px;
   padding: 20px;
-  background-color: rgba(33, 33, 33, 0.95);
-  border: none;
-  border-radius: 3px;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+  border: 1px solid black;
 }
 .main-info .name,
 .main-info .name-value,
@@ -116,107 +79,50 @@ body {
   margin-top: 10px;
   min-height: 40px;
   padding: 10px;
-  border: 1px solid rgba(83, 109, 254, 0.5);
-  border-radius: 5px;
-  color: rgba(255, 248, 225, 0.9);
-  font-size: 18px;
-   background-color:rgba(61, 90, 254, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.8);
 }
 .main-info .isopen-value,
 .main-info .discount-value {
-  background-color: #B71C1C
+  background-color: red;
 }
 .main-functions {
   width: 550px;
   min-height: 500px;
   padding: 20px;
-  background-color: rgba(38, 50, 56, 0.95);
-  border: none;
-  border-radius: 2px;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.7);
+  background-color: #fff;
+  border: 1px solid black;
 }
 .main-functions .choose-goods,
 .main-functions .choose-items,
 .main-functions .time,
 .main-functions .count-budget,
-.main-functions .hire-employers,
-.main-functions .discount-system
- {
-  padding: 2px;
+.main-functions .hire-employers {
   margin-top: 5px;
-  margin-left: -20px;
-  margin-right: -20px;
   text-align: center;
   font-size: 20px;
-  background-color: rgba(230, 81, 0, 0.4);
-  color: #fff;
 }
 .main-functions .goods-item {
   display: inline-block;
-  margin: 2px auto;
+  margin: 0 auto;
   margin-top: 10px;
   padding-left: 10px;
   width: 49%;
-  height: 30px;
-  background-color: rgba(230, 81, 0, 0.1);
-  color: #fff;
-  border-radius: 5px;
-  border: 1px solid rgba(245, 124, 0, 0.4);
-  box-shadow: 0px 0px 5px rgba(245, 124, 0, 0.4);
-
+  height: 25px;
 }
-.main-functions .goods-item-btn,
-.main-functions .discount-system-btn,
-.main-functions .hire-employers-btn{
+.main-functions .goods-item-btn {
   display: block;
   margin: 0 auto;
   margin-top: 10px;
-  border: none;
-  padding: 5px;
-  border-radius: 2px;
-  background-color: rgba(2, 119, 189,0.5);
-  cursor: pointer;
-  color: #fff;
-  font-weight: 600;
 }
-.main-functions .count-budget-btn {
-  border: none;
-  padding: 5px;
-  border-radius: 2px;
-  background-color: rgba(2, 119, 189,0.5);
-  cursor: pointer;
-  color: #fff;
-  font-weight: 600;
-}
-
-.main-functions .goods-item-btn:disabled,
-.main-functions .hire-employers-btn:disabled,
-.main-functions .count-budget-btn:disabled{
-background-color: rgba(0, 0, 0,0.2);
-color: rgba(150, 150, 150,0.5);
-cursor: default;
-}
-
-.main-functions .goods-item-btn:hover,
-.main-functions .discount-system-btn:hover,
-.main-functions .hire-employers-btn:hover,
-.main-functions .count-budget-btn:hover{
-  transform: scale(1.05);
-}
-
 .main-functions .choose-item,
 .main-functions .time-value,
 .main-functions .count-budget-value {
   display: block;
   margin: 0 auto;
   margin-top: 10px;
+  padding-left: 10px;
   width: 70%;
   height: 25px;
-  background-color: rgba(69, 39, 160, 0.2);
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-  border: 1px solid rgba(245, 124, 0, 0.4);
 }
 .main-functions .time-value {
   width: 30%;
@@ -233,11 +139,9 @@ cursor: default;
   padding-left: 10px;
   width: 49%;
   height: 25px;
-  background-color: rgba(232, 234, 246, 0.1);
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-  border: 1px solid rgba(245, 124, 0, 0.4);
-
 }
- 
+.main-functions .hire-employers-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+}
