--- a/lesson_6_dop/css/style.css
+++ b/lesson_6_dop/css/style.css
@@ -3,220 +3,311 @@
 }
 body {
   height: 670px;
-  background: url(../img/bg.jpg) center no-repeat;
-  background-size: cover;
-  word-break: break-all;
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  margin: 0;
+  color: #333;
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 2.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2.5s;
+}
+.fade2 {
+  animation-name: fade;
+  animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 0.98;
+  }
+}
+.open-btn {
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: 40px;
+  padding: 0 24px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 40px;
+  background-color: #fff;
+  color: #1976d2;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.open-btn:hover {
+  opacity: .9;
+  color: #6e6e6e;
+}
+.background-sky {
+  background-color: #1976d2;
+  background: linear-gradient(145deg, #1488cc, #1976d2);
+  color: #fff;
+}
+.hero {
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  min-height: 480px;
+  height: 80vh;
+  max-height: 560px;
+  box-sizing: border-box;
+  overflow: hidden;
+  top: 0px;
+  -webkit-transform: skewY(8deg);
+  transform: skewY(8deg);
+  -webkit-transform-origin: 100%;
+  transform-origin: 100%;
+}
+.hero-headline {
+  text-align: center;
+  position: relative;
+  z-index: 3;
+  font-size: 40px;
+  line-height: 64px;
+  font-weight: 500;
+  margin: 32px 0;
+  color: #fff;
 }
 .open {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(255, 255, 255, 0.3);
+  justify-content: center;
+  align-items: center;
   border: none;
-  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
-  width: 250px;
+  width: 350px;
   height: 100px;
   margin: 0 auto;
   margin-top: 20px;
 }
-.open:before {
-  content: "";
-  display: block;
-  position: absolute;
-  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
-  width: 20px;
-  height: 20px;
-  background-color: rgba(255, 255, 255, 0.2);
+.open-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  width: 350px;
+  height: 100px;
   margin: 0 auto;
-  -webkit-transform: translateY(-60px);
-      -ms-transform: translateY(-60px);
-          transform: translateY(-60px);
+  margin-top: -100px;
 }
-.open-btn {
-  border: none;
-  outline: none;
-  color: #fff;
-  font-weight: 900;
-  font-size: 18px;
-  cursor: pointer;
-  background-color: rgba(83, 109, 254, 0.6);
-  box-shadow: 1px 0px 10px rgba(83, 86, 173, 0.5);
-  border-radius: 2px;
-  border: none;
-  width: 200px;
-  height: 50px;
-}
-.open-btn:hover{
-  background-color: #00BCD4;
-  transform: scale(1.2);
+#close-btn {
+  display: none;
 }
 .main {
   width: 100%;
   margin-top: 30px;
-  margin-bottom: 30px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  justify-content: space-around;
+  margin: 30px auto;
+  max-width: 1170px;
+  overflow: hidden;
 }
 .main-info {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-align-content: flex-start;
-      -ms-flex-line-pack: start;
-          align-content: flex-start;
+  z-index: 2;
+  display: none;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
   width: 550px;
-  min-height: 300px;
-  padding: 20px;
-  background-color: rgba(33, 33, 33, 0.95);
-  border: none;
-  border-radius: 3px;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
+  min-height: 400px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px rgba(10, 16, 20, 0.24), 0 0 2px rgba(10, 16, 20, 0.12);
+  box-sizing: border-box;
+  transition: all 0.3s ease-in;
 }
 .main-info .name,
-.main-info .name-value,
 .main-info .budget,
-.main-info .budget-value,
 .main-info .goods,
-.main-info .goods-value,
 .main-info .items,
-.main-info .items-value,
 .main-info .employers,
-.main-info .employers-value,
 .main-info .discount,
+.main-info .isopen {
+  font-size: 16px;
+  width: 40%;
+  margin-top: 10px;
+  min-height: 40px;
+  padding: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+.main-info .name-value,
+.main-info .budget-value,
+.main-info .goods-value,
+.main-info .items-value,
+.main-info .employers-value,
 .main-info .discount-value,
-.main-info .isopen,
 .main-info .isopen-value {
+  text-align: center;
+  font-size: 16px;
   width: 48%;
   margin-top: 10px;
   min-height: 40px;
   padding: 10px;
-  border: 1px solid rgba(83, 109, 254, 0.5);
-  border-radius: 5px;
-  color: rgba(255, 248, 225, 0.9);
-  font-size: 18px;
-   background-color:rgba(61, 90, 254, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+.main-info .logo {
+  overflow: hidden;
+  margin-top: 50px;
+  max-height: 100px;
+  width: 100%;
+  text-align: center;
+}
+.main-info .logo img {
+  max-height: 100px;
+  margin: auto;
 }
 .main-info .isopen-value,
 .main-info .discount-value {
-  background-color: #B71C1C
+  background: #FF464C;
 }
 .main-functions {
+  display: none;
+  opacity: .98;
+  z-index: 2;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
   width: 550px;
-  min-height: 500px;
-  padding: 20px;
-  background-color: rgba(38, 50, 56, 0.95);
-  border: none;
-  border-radius: 2px;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.7);
+  min-height: 400px;
+  color: #fff;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 16px;
+  background-color: #2F2F2F;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px rgba(10, 16, 20, 0.24), 0 0 2px rgba(10, 16, 20, 0.12);
+  box-sizing: border-box;
+  transition: all 0.3s ease-in;
 }
 .main-functions .choose-goods,
 .main-functions .choose-items,
 .main-functions .time,
 .main-functions .count-budget,
 .main-functions .hire-employers,
-.main-functions .discount-system
- {
-  padding: 2px;
+.main-functions .discount-system {
   margin-top: 5px;
-  margin-left: -20px;
-  margin-right: -20px;
   text-align: center;
   font-size: 20px;
-  background-color: rgba(230, 81, 0, 0.4);
-  color: #fff;
 }
-.main-functions .goods-item {
-  display: inline-block;
-  margin: 2px auto;
-  margin-top: 10px;
-  padding-left: 10px;
-  width: 49%;
-  height: 30px;
-  background-color: rgba(230, 81, 0, 0.1);
-  color: #fff;
-  border-radius: 5px;
-  border: 1px solid rgba(245, 124, 0, 0.4);
-  box-shadow: 0px 0px 5px rgba(245, 124, 0, 0.4);
-
-}
-.main-functions .goods-item-btn,
-.main-functions .discount-system-btn,
-.main-functions .hire-employers-btn{
+.main-functions .discount-system-btn {
   display: block;
   margin: 0 auto;
   margin-top: 10px;
   border: none;
-  padding: 5px;
-  border-radius: 2px;
-  background-color: rgba(2, 119, 189,0.5);
   cursor: pointer;
-  color: #fff;
-  font-weight: 600;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
-.main-functions .count-budget-btn {
+.main-functions .goods-item {
+  display: inline-block;
+  margin: 0 auto;
+  font-size: 16px;
+  background: none;
+  margin-top: 10px;
+  padding-left: 10px;
+  width: 49%;
+  height: 25px;
+  color: #fff;
   border: none;
-  padding: 5px;
-  border-radius: 2px;
-  background-color: rgba(2, 119, 189,0.5);
-  cursor: pointer;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+}
+.main-functions .goods-item:focus {
+  background: none;
+  border-bottom: 1px solid rgba(25, 118, 210, 0.7);
+  outline: none;
   color: #fff;
-  font-weight: 600;
+  text-shadow: none;
 }
-
-.main-functions .goods-item-btn:disabled,
-.main-functions .hire-employers-btn:disabled,
-.main-functions .count-budget-btn:disabled{
-background-color: rgba(0, 0, 0,0.2);
-color: rgba(150, 150, 150,0.5);
-cursor: default;
+.main-functions .goods-item-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  border: none;
+  color: #fff ;
+  background-color: rgba(25, 118, 210, 0.7);
+  padding: 5px 15px;
+  background-color: #1976d2;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  cursor: pointer;
 }
-
-.main-functions .goods-item-btn:hover,
-.main-functions .discount-system-btn:hover,
-.main-functions .hire-employers-btn:hover,
-.main-functions .count-budget-btn:hover{
-  transform: scale(1.05);
+.main-functions .goods-item-btn:hover {
+  color: rgba(255, 255, 255, 0.7);
+  opacity: .9;
 }
-
+.main-functions .goods-item-btn:disabled {
+  opacity: .7;
+  background-color: rgba(255, 255, 255, 0.12);
+}
 .main-functions .choose-item,
 .main-functions .time-value,
 .main-functions .count-budget-value {
   display: block;
+  text-align: center;
   margin: 0 auto;
   margin-top: 10px;
+  padding-left: 10px;
   width: 70%;
   height: 25px;
-  background-color: rgba(69, 39, 160, 0.2);
+  font-size: 16px;
+  background: none;
   color: #fff;
-  text-align: center;
-  border-radius: 5px;
-  border: 1px solid rgba(245, 124, 0, 0.4);
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+}
+.main-functions .choose-item:focus,
+.main-functions .time-value:focus,
+.main-functions .count-budget-value:focus {
+  background: none;
+  border-bottom: 1px solid rgba(25, 118, 210, 0.7);
+  outline: none;
+  color: #fff;
+  text-shadow: none;
+}
+.main-functions .count-budget-btn {
+  margin: 0 auto;
+  margin-top: 10px;
+  border: none;
+  color: #fff !important;
+  background-color: rgba(25, 118, 210, 0.7);
+  padding: 5px 15px;
+  background-color: #1976d2;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.main-functions .count-budget-btn:hover {
+  opacity: .9;
+  color: rgba(255, 255, 255, 0.7);
+}
+.main-functions .count-budget-btn:disabled {
+  opacity: .7;
+  background-color: rgba(255, 255, 255, 0.12);
 }
 .main-functions .time-value {
   width: 30%;
@@ -227,17 +318,45 @@ cursor: default;
   margin-left: 25%;
 }
 .main-functions .hire-employers-item {
+  font-size: 16px;
+  background: none;
+  color: #fff;
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
   display: block;
   margin: 0 auto;
   margin-top: 10px;
   padding-left: 10px;
   width: 49%;
   height: 25px;
-  background-color: rgba(232, 234, 246, 0.1);
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-  border: 1px solid rgba(245, 124, 0, 0.4);
-
 }
- 
+.main-functions .hire-employers-item:focus {
+  background: none;
+  border-bottom: 1px solid rgba(25, 118, 210, 0.7);
+  outline: none;
+  color: #fff;
+  text-shadow: none;
+}
+.main-functions .hire-employers-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  border: none;
+  color: #fff !important;
+  background-color: rgba(25, 118, 210, 0.7);
+  padding: 5px 15px;
+  background-color: #1976d2;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.main-functions .hire-employers-btn:hover {
+  opacity: .9;
+  color: rgba(255, 255, 255, 0.7);
+}
+.main-functions .hire-employers-btn:disabled {
+  opacity: .7;
+  background-color: rgba(255, 255, 255, 0.12);
+}
