--- a/lesson_6_dop/css/style.less
+++ b/lesson_6_dop/css/style.less
@@ -4,107 +4,308 @@
 }
 body {
 	height: 670px;
-	background: url(../img/bg.jpg) center no-repeat;
-	background-size: cover;
-	word-break:break-all;
+	font-family: Roboto,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+    margin: 0;
+    color: #333;
+    font-size: 14px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #fafafa;
 
+}
+
+
+.fade {
+  animation-name: fade;
+  animation-duration: 2.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2.5s;
+  &2 {
+  	animation-name: fade;
+  animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  }
+}
+
+@keyframes fade{
+  from {opacity: .1}
+  to {opacity: .98}
+}
+
+
+.open-btn {
+		z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 40px;
+    padding: 0 24px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 40px;
+    background-color: #fff;
+    color: #1976d2;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+    box-sizing: border-box;
+    cursor: pointer;
+    &:hover {
+    	opacity: .9;
+    	color: #6e6e6e;
+    }
+}
+
+.background-sky {
+    background-color: #1976d2;
+    background: linear-gradient(145deg,#1488CC,#1976d2);
+    color: #fff;
+}
+.hero {
+		z-index: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    min-height: 480px;
+    height: 80vh;
+    max-height: 560px;
+    box-sizing: border-box;
+    overflow: hidden;
+    top: 0px;
+    -webkit-transform: skewY(8deg);
+    transform: skewY(8deg);
+    -webkit-transform-origin: 100%;
+    transform-origin: 100%;
+}
+
+.hero-headline {
+	text-align: center;
+		position: relative;
+		z-index: 3;
+    font-size: 40px;
+    line-height: 64px;
+    font-weight: 500;
+    margin: 32px 0;
+    color: #fff;
 }
 .open {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: rgba(256,256,256, .9);
-	border: 1px solid #000;
-	box-shadow: 0px 0px 10px rgba(256,256,256,.5);
+	// background-color: rgba(256,256,256, .9);
+	border: none;
+	// box-shadow: 0px 0px 10px rgba(256,256,256,.5);
 	width:350px;
 	height: 100px;
 	margin: 0 auto;
 	margin-top: 20px;
-	&:before {
-		content: "";
-		display: block;
-		position: absolute;
-		box-shadow: 0px 0px 10px rgba(256,256,256,.5);
-		width: 8px;
-		height: 20px;
-		background-color: #000;
+	&-close {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: none;
+		width:350px;
+		height: 100px;
 		margin: 0 auto;
-		transform: translateY(-60px);
+		margin-top: -100px;
 	}
-	&-btn {
-		border:none;
-		outline: none;
-		color: #fff;
-		font-weight: 900;
-		cursor: pointer;
-		background-color: #5356ad;
-		box-shadow: 0px 0px 10px rgba(83,86,173,.5);
-		border-radius: 8px;
-		border: 1px solid #fff;
-		width: 200px;
-		height: 50px;
-	}
+}
+#close-btn {
+	display: none;
 }
 .main {
 	width: 100%;
 	margin-top: 30px;
 	display: flex;
 	justify-content: space-around;
+	margin: 30px auto;
+	max-width: 1170px;
+	overflow: hidden;
+
 	&-info {
-		display: flex;
+		//opacity: .98;
+		z-index: 2;
+		display: none;
 		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: flex-start;
 		align-content: flex-start;
 		width: 550px;
 		min-height: 400px;
-		padding: 20px;
-		background-color: #fff;
-		border: 1px solid black;
-		.name, .name-value, .budget, .budget-value, .goods, .goods-value,.items, .items-value,
-		.employers, .employers-value, .discount, .discount-value, .isopen, .isopen-value{
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding: 16px;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 2px 2px rgba(10,16,20,.24), 0 0 2px rgba(10,16,20,.12);
+    box-sizing: border-box;
+    transition: all .3s ease-in;
+		.name, .budget, .goods,.items,
+		.employers, .discount, .isopen{
+			font-size: 16px;
+			width: 40%;
+			margin-top: 10px;
+			min-height: 40px;
+			padding:10px;
+			border-bottom: 1px solid rgba(0,0,0,.5);
+		
+		}
+
+		 .name-value, .budget-value,  .goods-value, .items-value,
+		.employers-value, .discount-value, .isopen-value{
+			text-align: center;
+			font-size: 16px;
 			width: 48%;
 			margin-top: 10px;
 			min-height: 40px;
 			padding:10px;
-			border: 1px solid rgba(0,0,0,.8);
+			border-bottom: 1px solid rgba(0,0,0,.5);
+
 		}
 
+.logo {
+	overflow: hidden;
+	margin-top: 50px;
+	max-height: 100px;
+	width: 100%;
+	text-align: center;
+	img {
+		max-height: 100px;
+		margin: auto;
+
+	}
+}
+
 		.isopen-value, .discount-value {
-			background-color: red;
+			background: #FF464C;
 		}
 	}
 	&-functions {
+		display: none;
+		opacity: .98;
+		z-index: 2;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: flex-start;
+		align-content: flex-start;
 		width: 550px;
-		min-height: 500px;
-		padding: 20px;
-		background-color: #fff;
-		border: 1px solid black;
-		.choose-goods, .choose-items, .time, .count-budget, .hire-employers {
+		min-height: 400px;
+		color: #fff;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding: 16px;
+    background-color: #2F2F2F;
+    border-radius: 4px;
+    box-shadow: 0 2px 2px rgba(10,16,20,.24), 0 0 2px rgba(10,16,20,.12);
+    box-sizing: border-box;
+    transition: all .3s ease-in;;
+		.choose-goods, .choose-items, .time, .count-budget, .hire-employers, .discount-system {
 			margin-top: 5px;
 			text-align: center;
 			font-size: 20px;
 		}
+		.discount-system-btn {
+			display: block;
+				margin: 0 auto;
+				margin-top: 10px;
+				border: none;
+				cursor: pointer;
+				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+				
+		}
 		.goods-item {
 			display: inline-block;
 			margin: 0 auto;
+			font-size: 16px;
+			background: none;
 			margin-top: 10px;
 			padding-left: 10px;
 			width: 49%;
 			height:25px;
+			color: #fff;
+			border: none;
+    	border-bottom: 1px solid hsla(0,0%,100%,.12);
+    	&:focus {
+		    background: none;
+		    border-bottom: 1px solid rgba(25, 118, 210, 0.7);
+		    outline:none;
+		    color: #fff;
+		    text-shadow: none;
+			}
 			&-btn {
 				display: block;
 				margin: 0 auto;
 				margin-top: 10px;
+				border: none;
+				color: #fff ;
+				background-color:rgba(25, 118, 210, 0.7);
+				padding: 5px 15px;
+				background-color:  #1976d2;
+				color: #fff;
+				border-radius: 3px;
+
+				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+				box-sizing: border-box;
+				cursor: pointer;
+				&:hover {
+					color:rgba(255,255, 255, 0.7);
+				  opacity: .9;
+				  
+				 }
+				 &:disabled {
+				  opacity: .7;
+				  background-color: hsla(0,0%,100%,.12);
+				    }
 			}
 		}	
 		.choose-item, .time-value, .count-budget-value {
 			display: block;
+			text-align: center;
 			margin: 0 auto;
 			margin-top: 10px;
 			padding-left: 10px;
 			width: 70%;
 			height:25px;
+			font-size: 16px;
+			background: none;
+			color: #fff;
+			border: none;
+    	border-bottom: 1px solid hsla(0,0%,100%,.12);
+    	&:focus {
+		    background: none;
+		    border-bottom: 1px solid rgba(25, 118, 210, 0.7);
+		    outline:none;
+		    color: #fff;
+		    text-shadow: none;
+		  }
+		}
+		.count-budget-btn {
+				margin: 0 auto;
+				margin-top: 10px;
+				border: none;;
+				color: #fff !important;
+				background-color:rgba(25, 118, 210, 0.7);
+				padding: 5px 15px;
+				background-color:  #1976d2;
+				color: #fff;
+				border-radius: 3px;
+				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);;
+				box-sizing: border-box;
+				cursor: pointer;
+				&:hover {
+				  opacity: .9;
+				  color:rgba(255,255, 255, 0.7);
+				 }
+				 &:disabled {
+				  opacity: .7;
+				  background-color: hsla(0,0%,100%,.12);
+				    }
 		}
 		.time-value {
 			width: 30%;
@@ -115,17 +316,48 @@ body {
 			margin-left: 25%;
 		}
 		.hire-employers-item {
+			font-size: 16px;
+			background: none;
+			color: #fff;
+			border: none;
+    	border-bottom: 1px solid hsla(0,0%,100%,.12);
 			display: block;
 			margin: 0 auto;
 			margin-top: 10px;
 			padding-left: 10px;
 			width: 49%;
 			height:25px;
+			&:focus {
+		    background: none;
+		    border-bottom: 1px solid rgba(25, 118, 210, 0.7);
+		    outline:none;
+		    color: #fff;
+		    text-shadow: none;
+		  }
 		}
 		.hire-employers-btn {
 			display: block;
-			margin: 0 auto;
-			margin-top: 10px;
+				margin: 0 auto;
+				margin-top: 10px;
+				border: none;;
+				color: #fff !important;
+				background-color:rgba(25, 118, 210, 0.7);
+				padding: 5px 15px;
+				background-color:  #1976d2;
+				color: #fff;
+				border-radius: 3px;
+				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);;
+				box-sizing: border-box;
+				cursor: pointer;
+				&:hover {
+				  opacity: .9;
+				  color:rgba(255,255, 255, 0.7);
+				 }
+				 &:disabled {
+				  opacity: .7;
+				  background-color: hsla(0,0%,100%,.12);
+				    }
+			
 		}
 	}
 }
